# hms-kivy

./: .editorconfig  .gitignore  Box Project.md  LICENSE  README.md  pyproject.toml
hms_kivy/: Kiosk.py  MeetingCheckIn.py  hms.py  kiosk.kv  meetingcheckin.kv  rfid.py  send_rfid.py  style.kv
hms_kivy/hms/: __init__.py  agm.py  boxes.py  hms.py  projects.py  user.py
hms_kivy/rfid/: __init__.py  cli.py  rfid.py
hms_kivy/screens/: BoxesScreen.kv  BoxesScreen.py  CheckInScreen.kv  CheckInScreen.py  HomeScreen.kv  HomeScreen.py  LogInScreen.kv  LogInScreen.py  NewProjectScreen.kv  NewProjectScreen.py  ProjectsScreen.kv  ProjectsScreen.py  RfidRegistrationScreen.kv  RfidRegistrationScreen.py  SettingsPasswordScreen.kv  SettingsPasswordScreen.py  __init__.py  checkinscreen.kv  loginscreen.kv
hms_kivy/utils/: __init__.py
init/: nh-kiosk.service  nh-meeting.service
tests/: test_hms.py  test_hms_kivy.py  test_kiosk.py  test_rfid.py  test_rfid_cli.py  test_send_rfid.py
